--- a/src/Club/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Club/BlogBundle/Resources/views/layout.html.twig
@@ -15,8 +15,20 @@
             <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
             <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         {% endblock %}
+        <script src="{{ asset('/public/js/modernizr.custom.js') }}"></script>
 
-        <script src="{{ asset('public/js/modernizr.custom.js') }}"></script>
+        {#<script type="text/javascript" src="{{ asset('bundles/bmatznermodernizr/js/modernizr.min.js') }}"></script>#}
+        
+
+        <script src="{{ asset('public/js/jquery-1.11.1.js') }}"></script>
+        {#<script src="{{ asset('public/js/owl.carousel.js') }}"></script>#}
+        {#<script src="{{ asset('public/js/waypoints.js') }}"></script>#}
+        {#<script src="{{ asset('public/js/excanvas.js') }}"></script>#}
+        {#<script src="{{ asset('public/js/superfish.js') }}"></script>#}
+        {#<script src="{{ asset('public/js/jquery.easypiechart.js') }}"></script>#}
+        <script src="{{ asset('/public/js/custom.js') }}"></script>
+        {##}
+        
 
         <!--[if lt IE 9]>
         <link rel="stylesheet" href="../public/css/ie.css" type="text/css" media="all"/>
