--- a/src/Club/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Club/BlogBundle/Resources/views/layout.html.twig
@@ -15,7 +15,7 @@
             <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
             <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         {% endblock %}
-        <script src="{{ asset('/public/js/modernizr.custom.js') }}"></script>
+        <script src="{{ asset('public/js/modernizr.custom.js') }}"></script>
 
         {#<script type="text/javascript" src="{{ asset('bundles/bmatznermodernizr/js/modernizr.min.js') }}"></script>#}
         
@@ -26,7 +26,7 @@
         {#<script src="{{ asset('public/js/excanvas.js') }}"></script>#}
         {#<script src="{{ asset('public/js/superfish.js') }}"></script>#}
         {#<script src="{{ asset('public/js/jquery.easypiechart.js') }}"></script>#}
-        <script src="{{ asset('/public/js/custom.js') }}"></script>
+        {#<script src="{{ asset('public/js/custom.js') }}"></script>#}
         {##}
         
 
