--- a/src/Club/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Club/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -5,12 +5,12 @@
 {{ form_widget(form) }}
 
 <div class="col-md-8 col-sm-8 col-xs-8">
-    <p class="contact-button clearfix ">
-        <span> <input type="submit" id="submit-contact" value="{{ 'profile.edit.submit'|trans }}"/></span>
+    <p class="">
+        <span> <input type="submit" value="{{ 'profile.edit.submit'|trans }}"/></span>
     </p>
 </div>
 {{ form_end(form) }}
 
-<div class="col-md-12 col-sm-12 col-xs-12">
-{{ render(controller('FOSUserBundle:ChangePassword:changePassword')) }}
-</div>
+{#<div class="col-md-12 col-sm-12 col-xs-12">#}
+{#{{ render(controller('FOSUserBundle:ChangePassword:changePassword')) }}#}
+{#</div>#}
