--- a/web/public/css/packages.css
+++ b/web/public/css/packages.css
@@ -12314,3 +12314,6 @@ ul.mobile-menu > li > a {
 }
 
 /*# sourceMappingURL=packages.css.map */
+body {
+    background-color: #00a7d0 !important;
+}
